[project]
name = "cb-pricer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "hvplot>=0.11.1",
    "panel>=1.5.0",
    "networkx>=3.4.2",
    "bokeh>=3.6.2",
    "polars>=1.33.0",
    "pyarrow>=21.0.0",
]
